<resources>
    <string name="app_name">DigiCampus</string>
    <string name="login_title_1">Καλως ήρθατε στο</string>
    <string name="login_title_2">DigiCampus.</string>
    <string name="login_email_input">Email</string>
    <string name="login_password_input">Κωδικός Πρόσβασης</string>
    <string name="title_activity_home">Home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ρυθμίσεις</string>

    <string name="menu_home">Αρχική Σελίδα</string>
    <string name="menu_announcements">Ανακοινώσεις</string>
    <string name="menu_calendar">Ημερολόγιο</string>
    <string name="menu_subjects">Μαθήματα</string>
    <string name="menu_grades">Βαθμολόγιο</string>
    <string name="menu_assignments">Εργασίες</string>
    <string name="example_rating">Example Rating</string>
    <string name="example_course_name">Example course name</string>
    <string name="example_description">Example description</string>
    <string name="example_announcement">Example Announcement</string>
    <string name="example_subject_name">Example subject name</string>
    <string name="title_activity_settings">Ρυθμίσεις</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sec_color_text">Δευτερεύων Χρώμα</string>
    <string name="pri_color_text">Κυρίως Χρώμα</string>
    <string name="text_menu_action_logout">Αποσύνδεση</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_toptext">Καλως ήρθατε στο DigiCampus.</string>
    <string name="signup_title">Εγγραφή</string>
    <string name="signup_form_name_text">Όνομα</string>
    <string name="signup_form_surname_text">Επώνυμο</string>
    <string name="signup_form_radiogroup_text">Τύπος Λογαριασμού</string>
    <string name="student">Φοιτητής</string>
    <string name="professor">Καθηγητής</string>
    <string name="signup_form_age_text">Ημερομηνία Γέννησης</string>
    <string name="login_signin_btn">ΣΎΝΔΕΣΗ</string>
    <string name="login_or_txt">Ή</string>
    <string name="login_signup_btn">ΕΓΓΡΑΦΉ</string>
    <string name="signup_form_pass_text">Κωδικός Πρόσβασης</string>
    <string name="signup_form_password_confirmation">Επιβεβαίωση Κωδικού</string>
    <string name="cancel">Ακύρωση</string>
    <string name="confirm">Επιβεβαίωση</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subject_groups">Ομάδες Χρηστών</string>
    <string name="attendance">Απουσίες</string>
    <string name="group_card_example_title">Ομάδα 1</string>
    <string name="subscribed">Subscribed</string>
    <string name="show_notification_text">Εμφάνιση Ειδοποίησης</string>
    <string name="channel_name">DigiCampus Announcements</string>
    <string name="channel_description">Notifications about announcements</string>
    <string name="search">Αναζήτηση</string>
</resources>