<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Εμφάνιση">

        <com.skydoves.colorpickerpreference.ColorPickerPreference
            app:defaultValue="@color/white"
            app:key="primary_color_setting"
            app:preference_colorBox_radius="26dp"
            app:preference_dialog_negative="@string/cancel"
            app:preference_dialog_positive="@string/confirm"
            app:title="@string/pri_color_text"/>

        <com.skydoves.colorpickerpreference.ColorPickerPreference
            app:defaultValue="@color/white"
            app:key="primary_color_setting"
            app:preference_colorBox_radius="26dp"
            app:preference_dialog_negative="@string/cancel"
            app:preference_dialog_positive="@string/confirm"
            app:title="@string/sec_color_text"/>


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>