<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
<!--        <item-->
<!--            android:id="@+id/nav_home"-->
<!--            android:icon="@drawable/ic_baseline_home_24"-->
<!--            android:title="@string/menu_home" />-->
        <item
            android:id="@+id/nav_announcements"
            android:icon="@drawable/ic_baseline_announcement_24"
            android:title="@string/menu_announcements" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_subjects"
            android:icon="@drawable/ic_baseline_book_24"
            android:title="@string/menu_subjects"
            />
        <item
            android:id="@+id/nav_grades"
            android:icon="@drawable/ic_baseline_assessment_24"
            android:title="@string/menu_grades"
            />
        <item
            android:id="@+id/nav_assignments"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/menu_assignments"
            />
    </group>
</menu>