<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_action_search"
        android:orderInCategory="10"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/show_example_notification"
        android:orderInCategory="100"
        android:title="@string/show_notification_text"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_action_logout"
        android:orderInCategory="100"
        android:title="@string/text_menu_action_logout"
        app:showAsAction="never" />
</menu>