<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:theme="@style/Theme.WhiteActionBar"
    tools:context=".SignupActivity">


    <TextView
        android:id="@+id/signup_toptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/signup_title"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/signup_form_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/signup_form_padding_sides"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto"
        android:text="@string/signup_form_name_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_toptext" />

    <EditText
        android:id="@+id/signup_form_name_input"
        style="@style/input_text"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="@dimen/signup_form_padding_sides"
        android:layout_marginTop="4dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/signup_form_surname_input"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_form_name_text"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/signup_form_surname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto"
        android:text="@string/signup_form_surname_text"
        app:layout_constraintStart_toStartOf="@+id/signup_form_surname_input"
        app:layout_constraintTop_toBottomOf="@+id/signup_toptext" />

    <EditText
        android:id="@+id/signup_form_surname_input"
        style="@style/input_text"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/signup_form_padding_sides"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/signup_form_name_input"
        app:layout_constraintTop_toBottomOf="@+id/signup_form_surname_text"
        tools:ignore="Autofill,LabelFor" />


    <TextView
        android:id="@+id/signup_form_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/login_email_input"
        app:layout_constraintStart_toStartOf="@+id/signup_form_email_input"
        app:layout_constraintTop_toBottomOf="@+id/signup_form_name_input" />

    <EditText
        android:id="@+id/signup_form_email_input"
        style="@style/input_text"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/signup_form_padding_sides"
        android:layout_marginStart="@dimen/signup_form_padding_sides"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_form_email_text"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/signup_form_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/signup_form_padding_sides"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/signup_form_pass_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_form_email_input"/>

    <EditText
        android:id="@+id/signup_form_password_input"
        style="@style/input_text"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="@dimen/signup_form_padding_sides"
        android:layout_marginEnd="@dimen/signup_form_padding_sides"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_form_password_text"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/signup_form_password_confirmation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/signup_form_padding_sides"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/signup_form_password_confirmation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_form_password_input" />

    <EditText
        android:id="@+id/signup_form_password_confirmation_input"
        style="@style/input_text"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="@dimen/signup_form_padding_sides"
        android:layout_marginEnd="@dimen/signup_form_padding_sides"
        android:layout_marginTop="4dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_form_password_confirmation_text"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/signup_form_radiogroup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/signup_form_padding_sides"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/signup_form_radiogroup_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_form_password_confirmation_input" />

    <RadioGroup
        android:id="@+id/signup_form_accountype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/signup_form_padding_sides"
        android:checkedButton="@id/signup_form_radiogroup_student"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_form_radiogroup_text">

        <RadioButton
            android:id="@+id/signup_form_radiogroup_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student" />

        <RadioButton
            android:id="@+id/signup_form_radiogroup_professor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/professor" />
    </RadioGroup>


    <TextView
        android:id="@+id/signup_form_age_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/signup_form_age_text"
        app:layout_constraintStart_toStartOf="@+id/signup_form_radiogroup_text"
        app:layout_constraintTop_toBottomOf="@+id/signup_form_accountype" />

    <EditText
        android:id="@+id/signup_form_age_input"
        style="@style/input_text"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/signup_form_padding_sides"
        android:layout_marginStart="@dimen/signup_form_padding_sides"
        android:focusable="false"
        android:longClickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_form_age_text"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:id="@+id/signup_form_button"
        style="@style/login_button"
        android:text="@string/login_signup_btn"
        android:layout_marginBottom="@dimen/signup_form_padding_sides"
        android:layout_marginStart="@dimen/signup_form_padding_sides"
        android:layout_marginEnd="@dimen/signup_form_padding_sides"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>