<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/card_bg"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/card_announcement_title"
            android:layout_width="234dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/example_announcement"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/card_announcement_subject_name"
            android:layout_width="300dp"
            android:layout_height="15dp"
            android:layout_below="@+id/card_announcement_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:text="@string/example_subject_name"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/card_announcement_content"
            android:layout_width="234dp"
            android:layout_height="30dp"
            android:layout_below="@id/card_announcement_subject_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:text="@string/example_description"
            android:textColor="@color/white" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>