<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/card_bg"
    app:cardCornerRadius="2dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/card_subject_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            app:tint="@color/navmenu_item_color"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_book_24" />

        <TextView
            android:id="@+id/card_subject_name"
            android:layout_width="234dp"
            android:layout_height="34dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:layout_toEndOf="@id/card_subject_img"
            android:gravity="center"
            android:text="@string/example_course_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/card_subject_info"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_subject_name"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:layout_toEndOf="@id/card_subject_img"
            android:drawablePadding="2dp"
            android:text="@string/example_description"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/card_subject_subscribed"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_done_24"
            app:tint="@color/black" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>